Record laptop-verified instructor walkthroughs for Weeks 1-3 labs and related Windows smoke notes.